--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           </div>
         </div>
         <div>
-          <img src="26a1.gif" alt="Electrician" class="mx-auto w-64" />
+          <img src="https://img.icons8.com/?size=100&id=110198&format=png&color=000000" alt="Electrician" class="mx-auto w-64" />
         </div>
       </div>
     </section>
