--- a/index.html
+++ b/index.html
@@ -110,34 +110,6 @@
     </div>
 
     <!-- Hero Section -->
-    <section class="px-6 py-12 text-center bg-gray-50">
-      <div class="max-w-5xl mx-auto grid md:grid-cols-2 gap-8 items-center">
-        <div>
-          <h1 class="text-4xl font-bold mb-6">
-            Book a certified electrician in minutes
-          </h1>
-          <div class="flex items-center justify-center gap-2">
-            <select class="px-4 py-2 border rounded">
-              <option>Choose a service</option>
-              <option>Fan Installation</option>
-              <option>Light Repair</option>
-              <option>Wiring</option>
-              <option>Breaker Setup</option>
-            </select>
-            <button
-              class="bg-blue-600 text-white px-5 py-2 rounded hover:bg-blue-700"
-            >
-              Book Now
-            </button>
-          </div>
-        </div>
-        <div>
-          <img src="https://img.icons8.com/?size=100&id=110198&format=png&color=000000" alt="Electrician" class="mx-auto w-64" />
-        </div>
-      </div>
-    </section>
-
-    <!-- Hero Section -->
     <section class="text-center py-12 px-4 bg-gray-50">
       <div class="max-w-4xl mx-auto">
         <h1 class="text-3xl md:text-5xl font-bold mb-4">
@@ -157,13 +129,13 @@
             Book Now
           </button>
         </div>
-        <div class="mt-8">
-          <img
-            src="https://img.icons8.com/color/96/worker-male--v1.png"
-            alt="Electrician"
-            class="mx-auto"
-          />
-        </div>
+      </div>
+      <div>
+        <img
+          src="https://www.wannapik.com/media/W1siZiIsIjIwMTYvMDgvMjIvN2llaXZpM3JmN184OG5uYzJxZXJxX3Blb3AxNjg4LnBuZyJdXQ/52bba00b8d1f952a/88nnc2qerq_peop1688.png"
+          alt="Electrician"
+          class="mx-auto mt-8 mb-0 w-40"
+        />
       </div>
     </section>
 
