--- a/services.html
+++ b/services.html
@@ -143,7 +143,7 @@
         </div>
         <div>
           <img
-            src="https://www.wannapik.com/media/W1siZiIsIjIwMTYvMDgvMjIvN2llaXZpM3JmN184OG5uYzJxZXJxX3Blb3AxNjg4LnBuZyJdXQ/52bba00b8d1f952a/88nnc2qerq_peop1688.png"
+            src="web1.png"
             alt="Electrician"
             class="mx-auto w-64"
           />
