--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <nav class="flex flex-col gap-3 text-sm font-medium mt-4">
         <a href="#" class="hover:text-blue-600">Home</a>
         <a href="#store" class="hover:text-blue-600">Store</a>
-        <a href="#services" class="hover:text-blue-600">Services</a>
+        <a href="services.html" class="hover:text-blue-600">Services</a>
         <a href="#contact" class="hover:text-blue-600">Contact</a>
       </nav>
     </div>
