--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               </li>
               <li>
                 <a
-                  href="plumbing.html"
+                  href="Plumbing.html"
                   class="block px-4 py-2 hover:bg-blue-100"
                 >
                   Plumbing
