--- a/index.html
+++ b/index.html
@@ -178,10 +178,10 @@
           </ul>
         </li>
         <li>
-          <a href="#" class="block px-4 py-2 hover:bg-gray-100">Store</a>
+          <a href="store.html" class="block px-4 py-2 hover:bg-gray-100">Store</a>
         </li>
         <li>
-          <a href="#" class="block px-4 py-2 hover:bg-gray-100">Contact</a>
+          <a href="contact.html" class="block px-4 py-2 hover:bg-gray-100">Contact</a>
         </li>
       </ul>
     </nav>
@@ -665,3 +665,4 @@
     </footer>
   </body>
 </html>
+
