--- a/index.html
+++ b/index.html
@@ -31,52 +31,86 @@
     <header
       class="hidden lg:flex bg-white shadow-md py-4 px-4 items-center justify-between"
     >
-      <!-- Left: Logo -->
-      <div class="flex items-center space-x-2">
-        <span class="text-black">⚡</span>
-        <span class="font-bold text-blue-600">VoltFix</span>
+      <!-- Logo -->
+      <div class="flex items-center gap-2 justify-center md:justify-start">
+        <img
+          src="https://img.icons8.com/ios-filled/50/000000/flash-on.png"
+          alt="VoltFix Logo"
+          class="w-6 h-6"
+        />
+        <span class="text-xl font-bold text-blue-600">VoltFix</span>
       </div>
 
-      <!-- Center: Navigation -->
-      <nav class="flex space-x-6">
-        <a href="#" class="hover:text-blue-600">Home</a>
-        <div class="relative group">
-          <button class="hover:text-blue-600 flex items-center">
-            Services
-            <svg
-              class="ml-1 w-4 h-4"
-              fill="none"
-              stroke="currentColor"
-              viewBox="0 0 24 24"
+      <!-- Desktop Navigation Menu (Centered) -->
+      <nav class="hidden md:flex justify-center text-sm font-medium">
+        <ul class="flex space-x-8 px-6 py-4 font-medium relative">
+          <li><a href="index.html" class="hover:text-blue-600">Home</a></li>
+
+          <!-- Services with Dropdown -->
+          <li class="relative group">
+            <button
+              class="hover:text-blue-600 flex items-center focus:outline-none"
             >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M19 9l-7 7-7-7"
-              />
-            </svg>
-          </button>
-          <!-- Dropdown -->
-          <div
-            class="absolute hidden group-hover:block bg-white shadow-lg mt-2 rounded"
-          >
-            <a href="#" class="block px-4 py-2 hover:bg-gray-100">Service 1</a>
-            <a href="#" class="block px-4 py-2 hover:bg-gray-100">Service 2</a>
-          </div>
-        </div>
-        <a href="#" class="hover:text-blue-600">Store</a>
-        <a href="#" class="hover:text-blue-600">Contact</a>
+              Services
+              <svg class="ml-1 w-4 h-4" fill="currentColor" viewBox="0 0 20 20">
+                <path
+                  d="M5.23 7.21a.75.75 0 011.06.02L10 11.06l3.71-3.83a.75.75 0 011.08 1.04l-4.25 4.4a.75.75 0 01-1.08 0L5.21 8.27a.75.75 0 01.02-1.06z"
+                />
+              </svg>
+            </button>
+
+            <!-- Submenu Dropdown -->
+            <ul
+              class="absolute left-0 mt-2 w-40 bg-white border rounded shadow-lg opacity-0 group-hover:opacity-100 invisible group-hover:visible transition-all duration-300 z-50"
+            >
+              <li>
+                <a
+                  href="electrical.html"
+                  class="block px-4 py-2 hover:bg-blue-100"
+                >
+                  Electric
+                </a>
+              </li>
+              <li>
+                <a
+                  href="Plumbing.html"
+                  class="block px-4 py-2 hover:bg-blue-100"
+                >
+                  Plumbing
+                </a>
+              </li>
+              <li>
+                <a
+                  href="ac-repair.html"
+                  class="block px-4 py-2 hover:bg-blue-100"
+                >
+                  AC Service
+                </a>
+              </li>
+            </ul>
+          </li>
+
+          <li><a href="store.html" class="hover:text-blue-600">Store</a></li>
+          <li>
+            <a href="contact.html" class="hover:text-blue-600">Contact</a>
+          </li>
+        </ul>
       </nav>
 
-      <!-- Right: Search -->
-      <div class="relative">
-        <input
-          type="text"
-          placeholder="Search services..."
-          class="border rounded px-3 py-1"
-        />
-        <span class="absolute right-2 top-1.5 text-gray-500"> 🔍 </span>
+      <!-- Search (PC: Right | Mobile: Right Icon) -->
+      <div class="hidden md:flex justify-end items-center">
+        <div class="flex border rounded px-2 py-1 items-center">
+          <input
+            type="text"
+            placeholder="Search services..."
+            class="px-2 py-1 outline-none"
+          />
+          <img
+            src="https://img.icons8.com/ios-filled/24/search--v1.png"
+            alt="Search"
+            class="w-5 h-5"
+          />
+        </div>
       </div>
     </header>
 
@@ -89,7 +123,7 @@
       <div class="text-2xl font-bold text-blue-500">zoom</div>
 
       <!-- Right Side: Services + Menu -->
-      <div class="flex items-center gap-2">
+      <div class="flex items-center gap-4">
         <!-- Services Dropdown -->
         <div class="relative" x-data="{ open: false }">
           <button
@@ -173,6 +207,155 @@
         <a href="#" class="block py-2 border-b">Contact</a>
       </div>
     </div>
+
+    <!DOCTYPE html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Mobile Sidebar Menu</title>
+        <script src="https://cdn.tailwindcss.com"></script>
+      </head>
+      <body class="bg-gray-100">
+        <!-- Mobile Menu Button -->
+        <button
+          id="menu-btn"
+          class="p-2 m-4 bg-gray-800 text-white rounded-lg lg:hidden"
+        >
+          ☰ Menu
+        </button>
+
+        <!-- Overlay -->
+        <div
+          id="overlay"
+          class="hidden fixed inset-0 bg-black bg-opacity-50 z-40"
+        ></div>
+
+        <!-- Full-Screen Sidebar -->
+        <div
+          id="mobile-sidebar"
+          class="hidden fixed inset-0 bg-white z-50 flex flex-col"
+        >
+          <!-- Top Header with Title + Close Button -->
+          <div
+            class="flex items-center justify-between bg-gray-100 p-4 border-b"
+          >
+            <span
+              id="services-title"
+              class="text-sm font-semibold truncate max-w-[80%]"
+              >Select a category</span
+            >
+            <button
+              id="close-btn"
+              class="text-xl font-bold text-gray-600 hover:text-black"
+            >
+              ✕
+            </button>
+          </div>
+
+          <div class="flex flex-1">
+            <!-- Left Categories -->
+            <div class="w-1/3 bg-gray-50 border-r overflow-y-auto">
+              <!-- Category List -->
+              <ul id="categories" class="flex flex-col">
+                <li
+                  class="p-4 flex items-center space-x-2 cursor-pointer hover:bg-gray-200"
+                  onclick="showServices('AC Repair Services', 7)"
+                >
+                  <img
+                    src="https://via.placeholder.com/30"
+                    class="w-8 h-8 rounded object-cover"
+                    alt="AC"
+                  />
+                  <span>AC Repair Services</span>
+                </li>
+                <li
+                  class="p-4 flex items-center space-x-2 cursor-pointer hover:bg-gray-200"
+                  onclick="showServices('Electrical Services', 4)"
+                >
+                  <img
+                    src="https://via.placeholder.com/30"
+                    class="w-8 h-8 rounded object-cover"
+                    alt="Electrical"
+                  />
+                  <span>Electrical Services</span>
+                </li>
+                <li
+                  class="p-4 flex items-center space-x-2 cursor-pointer hover:bg-gray-200"
+                  onclick="showServices('Plumbing Services', 5)"
+                >
+                  <img
+                    src="https://via.placeholder.com/30"
+                    class="w-8 h-8 rounded object-cover"
+                    alt="Plumbing"
+                  />
+                  <span>Plumbing Services</span>
+                </li>
+                <li
+                  class="p-4 flex items-center space-x-2 cursor-pointer hover:bg-gray-200"
+                  onclick="showServices('Cleaning Services', 3)"
+                >
+                  <img
+                    src="https://via.placeholder.com/30"
+                    class="w-8 h-8 rounded object-cover"
+                    alt="Cleaning"
+                  />
+                  <span>Cleaning Services</span>
+                </li>
+              </ul>
+            </div>
+
+            <!-- Right Subservices -->
+            <div class="w-2/3 p-4 overflow-y-auto">
+              <div id="services-list" class="space-y-3">
+                <p class="text-gray-500">Select a category to view services</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <script>
+          const menuBtn = document.getElementById("menu-btn");
+          const closeBtn = document.getElementById("close-btn");
+          const sidebar = document.getElementById("mobile-sidebar");
+          const overlay = document.getElementById("overlay");
+          const servicesTitle = document.getElementById("services-title");
+
+          function toggleMenu() {
+            sidebar.classList.toggle("hidden");
+            overlay.classList.toggle("hidden");
+          }
+
+          menuBtn.addEventListener("click", toggleMenu);
+          closeBtn.addEventListener("click", toggleMenu);
+          overlay.addEventListener("click", toggleMenu);
+
+          function showServices(title, count) {
+            servicesTitle.textContent = `${count} services in ${title}`;
+
+            const services = [];
+            for (let i = 1; i <= count; i++) {
+              services.push({
+                name: `${title} Service ${i}`,
+                img: `https://via.placeholder.com/50?text=${i}`,
+              });
+            }
+
+            const servicesList = document.getElementById("services-list");
+            servicesList.innerHTML = services
+              .map(
+                (s) => `
+      <div class="flex items-center space-x-3 border-b pb-2">
+        <img src="${s.img}" class="w-12 h-12 rounded object-cover">
+        <span>${s.name}</span>
+      </div>
+    `
+              )
+              .join("");
+          }
+        </script>
+      </body>
+    </html>
 
     <!-- Alpine.js -->
     <script
