--- a/index.html
+++ b/index.html
@@ -114,6 +114,196 @@
       </div>
     </header>
 
+    <!-- Header (Visible on mobile + tablet, hidden on PC) -->
+    <div
+      class="flex items-center justify-between p-3 bg-white border-b border-gray-200 lg:hidden"
+      x-data="{ menuOpen: false }"
+    >
+      <!-- Logo -->
+      <div class="text-2xl font-bold text-blue-500">zoom</div>
+
+      <!-- Right Side: Services + Menu -->
+      <div class="flex items-center gap-4">
+        <!-- Services Button (opens full-screen sidebar) -->
+        <button
+          onclick="toggleMenu()"
+          class="bg-blue-50 text-black px-3 py-1.5 rounded-lg text-sm flex items-center gap-1"
+        >
+          Services
+          <svg
+            class="w-3 h-3"
+            fill="none"
+            stroke="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M19 9l-7 7-7-7"
+            />
+          </svg>
+        </button>
+
+        <!-- Menu Icon (optional side menu for Home/About) -->
+        <div class="text-xl cursor-pointer" @click="menuOpen = true">
+          &#9776;
+        </div>
+      </div>
+
+      <!-- Side Menu Overlay -->
+      <div
+        x-show="menuOpen"
+        class="fixed inset-0 bg-black bg-opacity-50 z-20"
+        @click="menuOpen = false"
+      ></div>
+
+      <!-- Side Menu -->
+      <div
+        x-show="menuOpen"
+        class="fixed top-0 right-0 w-64 h-full bg-white shadow-lg z-30 p-4"
+        @click.away="menuOpen = false"
+        x-data="{ sideDropdown: false }"
+      >
+        <h2 class="text-lg font-bold mb-4">Menu</h2>
+        <a href="#" class="block py-2 border-b">Home</a>
+        <a href="#" class="block py-2 border-b">About</a>
+        <a href="#" class="block py-2 border-b">Contact</a>
+      </div>
+    </div>
+
+    <!-- Overlay -->
+    <div
+      id="overlay"
+      class="hidden fixed inset-0 bg-black bg-opacity-50 z-40"
+    ></div>
+
+    <!-- Full-Screen Sidebar -->
+    <div
+      id="mobile-sidebar"
+      class="hidden fixed inset-0 bg-white z-50 flex flex-col"
+    >
+      <!-- Top Header with Title + Close Button -->
+      <div class="flex items-center justify-between bg-gray-100 p-4 border-b">
+        <span
+          id="services-title"
+          class="text-sm font-semibold truncate max-w-[80%]"
+          >Select a category</span
+        >
+        <button
+          id="close-btn"
+          class="text-xl font-bold text-gray-600 hover:text-black"
+        >
+          ✕
+        </button>
+      </div>
+
+      <div class="flex flex-1">
+        <!-- Left Categories -->
+        <div class="w-1/3 bg-gray-50 border-r overflow-y-auto">
+          <!-- Category List -->
+          <ul id="categories" class="flex flex-col">
+            <li
+              class="p-4 flex items-center space-x-2 cursor-pointer hover:bg-gray-200"
+              onclick="showServices('AC Repair Services', 7)"
+            >
+              <img
+                src="https://via.placeholder.com/30"
+                class="w-8 h-8 rounded object-cover"
+                alt="AC"
+              />
+              <span>AC Repair Services</span>
+            </li>
+            <li
+              class="p-4 flex items-center space-x-2 cursor-pointer hover:bg-gray-200"
+              onclick="showServices('Electrical Services', 4)"
+            >
+              <img
+                src="https://via.placeholder.com/30"
+                class="w-8 h-8 rounded object-cover"
+                alt="Electrical"
+              />
+              <span>Electrical Services</span>
+            </li>
+            <li
+              class="p-4 flex items-center space-x-2 cursor-pointer hover:bg-gray-200"
+              onclick="showServices('Plumbing Services', 5)"
+            >
+              <img
+                src="https://via.placeholder.com/30"
+                class="w-8 h-8 rounded object-cover"
+                alt="Plumbing"
+              />
+              <span>Plumbing Services</span>
+            </li>
+            <li
+              class="p-4 flex items-center space-x-2 cursor-pointer hover:bg-gray-200"
+              onclick="showServices('Cleaning Services', 3)"
+            >
+              <img
+                src="https://via.placeholder.com/30"
+                class="w-8 h-8 rounded object-cover"
+                alt="Cleaning"
+              />
+              <span>Cleaning Services</span>
+            </li>
+          </ul>
+        </div>
+
+        <!-- Right Subservices -->
+        <div class="w-2/3 p-4 overflow-y-auto">
+          <div id="services-list" class="space-y-3">
+            <p class="text-gray-500">Select a category to view services</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script>
+      const closeBtn = document.getElementById("close-btn");
+      const sidebar = document.getElementById("mobile-sidebar");
+      const overlay = document.getElementById("overlay");
+      const servicesTitle = document.getElementById("services-title");
+
+      function toggleMenu() {
+        sidebar.classList.toggle("hidden");
+        overlay.classList.toggle("hidden");
+      }
+
+      closeBtn.addEventListener("click", toggleMenu);
+      overlay.addEventListener("click", toggleMenu);
+
+      function showServices(title, count) {
+        servicesTitle.textContent = `${count} services in ${title}`;
+
+        const services = [];
+        for (let i = 1; i <= count; i++) {
+          services.push({
+            name: `${title} Service ${i}`,
+            img: `https://via.placeholder.com/50?text=${i}`,
+          });
+        }
+
+        const servicesList = document.getElementById("services-list");
+        servicesList.innerHTML = services
+          .map(
+            (s) => `
+    <div class="flex items-center space-x-3 border-b pb-2">
+      <img src="${s.img}" class="w-12 h-12 rounded object-cover">
+      <span>${s.name}</span>
+    </div>
+  `
+          )
+          .join("");
+      }
+    </script>
+
+    <!-- Alpine.js -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
+      defer
+    ></script>
+
     <!-- Hero Section -->
     <section class="w-full bg-gray-50 py-12">
       <div
@@ -1024,388 +1214,3 @@
     </footer>
   </body>
 </html>
-
-    <!-- Services Section -->
-    <section class="py-12 px-6 bg-white text-center">
-      <h2 class="text-2xl font-semibold mb-8">Services</h2>
-      <div class="grid grid-cols-2 md:grid-cols-4 gap-6 max-w-5xl mx-auto">
-        <div>
-          <img
-            src="https://img.icons8.com/ios-filled/100/electrical.png"
-            alt="Electric"
-            class="mx-auto"
-          />
-          <p class="mt-2 font-medium">Electric</p>
-        </div>
-        <div>
-          <img
-            src="https://img.icons8.com/ios-filled/100/plumbing.png"
-            alt="Plumbing"
-            class="mx-auto"
-          />
-          <p class="mt-2 font-medium">Plumbing</p>
-        </div>
-        <div>
-          <img
-            src="https://img.icons8.com/ios-filled/100/air-conditioner.png"
-            alt="AC"
-            class="mx-auto"
-          />
-          <p class="mt-2 font-medium">AC</p>
-        </div>
-        <div>
-          <img
-            src="https://img.icons8.com/ios-filled/100/services.png"
-            alt="Other Services"
-            class="mx-auto"
-          />
-          <p class="mt-2 font-medium">Other</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- ইলেকট্রিক সার্ভিস সেকশন -->
-    <section class="bg-white py-10">
-      <div class="max-w-6xl mx-auto px-4">
-        <h2 class="text-2xl font-semibold text-center text-gray-800 mb-8">
-          ⚡ আমাদের ইলেকট্রিক সার্ভিসসমূহ
-        </h2>
-        <div
-          class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-6 text-center"
-        >
-          <!-- ফ্যান সেটআপ -->
-          <div class="p-4 border rounded hover:shadow-md transition">
-            <img
-              src="https://img.icons8.com/ios-filled/50/fan.png"
-              class="mx-auto mb-2"
-              alt="Fan Installation"
-            />
-            <p class="font-medium">ফ্যান লাগানো</p>
-          </div>
-
-          <!-- লাইট সেটআপ -->
-          <div class="p-4 border rounded hover:shadow-md transition">
-            <img
-              src="https://img.icons8.com/ios-filled/50/light-on.png"
-              class="mx-auto mb-2"
-              alt="Light Setup"
-            />
-            <p class="font-medium">লাইট সেটআপ</p>
-          </div>
-
-          <!-- তার মেরামত -->
-          <div class="p-4 border rounded hover:shadow-md transition">
-            <img
-              src="https://img.icons8.com/ios-filled/50/electrical.png"
-              class="mx-auto mb-2"
-              alt="Wiring Repair"
-            />
-            <p class="font-medium">ওয়্যারিং মেরামত</p>
-          </div>
-
-          <!-- ব্রেকার সেটআপ -->
-          <div class="p-4 border rounded hover:shadow-md transition">
-            <img
-              src="https://img.icons8.com/ios-filled/50/electrical-threshold.png"
-              class="mx-auto mb-2"
-              alt="Breaker Setup"
-            />
-            <p class="font-medium">ব্রেকার সেটআপ</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Plumbing Services -->
-    <section id="plumbing" class="py-10 bg-gray-50">
-      <div class="max-w-6xl mx-auto px-4">
-        <h2 class="text-2xl font-semibold text-center mb-8">
-          🚰 Plumbing Services
-        </h2>
-        <div class="grid grid-cols-2 md:grid-cols-4 gap-6 text-center">
-          <div class="p-4 border rounded hover:shadow-md">
-            <img
-              src="https://img.icons8.com/ios-filled/50/plumbing.png"
-              class="mx-auto mb-2"
-            />
-            <p class="font-medium">Tap Installation</p>
-          </div>
-
-          <div class="p-4 border rounded hover:shadow-md">
-            <img
-              src="https://img.icons8.com/ios-filled/50/toilet.png"
-              class="mx-auto mb-2"
-            />
-            <p class="font-medium">Toilet Fix</p>
-          </div>
-
-          <div class="p-4 border rounded hover:shadow-md">
-            <img
-              src="https://img.icons8.com/ios-filled/50/water.png"
-              class="mx-auto mb-2"
-            />
-            <p class="font-medium">Water Line</p>
-          </div>
-
-          <div class="p-4 border rounded hover:shadow-md">
-            <img
-              src="https://img.icons8.com/ios-filled/50/water-pump.png"
-              class="mx-auto mb-2"
-            />
-            <p class="font-medium">Pump Repair</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- AC Services -->
-    <section id="ac" class="py-10 bg-white">
-      <div class="max-w-6xl mx-auto px-4">
-        <h2 class="text-2xl font-semibold text-center mb-8">❄️ AC Services</h2>
-        <div class="grid grid-cols-2 md:grid-cols-4 gap-6 text-center">
-          <div class="p-4 border rounded hover:shadow-md">
-            <img
-              src="https://img.icons8.com/ios-filled/50/air-conditioner.png"
-              class="mx-auto mb-2"
-            />
-            <p class="font-medium">AC Installation</p>
-          </div>
-
-          <div class="p-4 border rounded hover:shadow-md">
-            <img
-              src="https://img.icons8.com/ios-filled/50/settings.png"
-              class="mx-auto mb-2"
-            />
-            <p class="font-medium">AC Servicing</p>
-          </div>
-
-          <div class="p-4 border rounded hover:shadow-md">
-            <img
-              src="https://img.icons8.com/ios-filled/50/air-element.png"
-              class="mx-auto mb-2"
-            />
-            <p class="font-medium">AC Gas Fill</p>
-          </div>
-
-          <div class="p-4 border rounded hover:shadow-md">
-            <img
-              src="https://img.icons8.com/ios-filled/50/fan.png"
-              class="mx-auto mb-2"
-            />
-            <p class="font-medium">Fan Motor Repair</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Thai Services -->
-    <section id="thai" class="py-10 bg-gray-50">
-      <div class="max-w-6xl mx-auto px-4">
-        <h2 class="text-2xl font-semibold text-center mb-8">
-          🚪 Thai Services
-        </h2>
-        <div class="grid grid-cols-2 md:grid-cols-4 gap-6 text-center">
-          <div class="p-4 border rounded hover:shadow-md">
-            <img
-              src="https://img.icons8.com/ios-filled/50/glass-door.png"
-              class="mx-auto mb-2"
-            />
-            <p class="font-medium">Glass Door</p>
-          </div>
-
-          <div class="p-4 border rounded hover:shadow-md">
-            <img
-              src="https://img.icons8.com/ios-filled/50/window.png"
-              class="mx-auto mb-2"
-            />
-            <p class="font-medium">Window Repair</p>
-          </div>
-
-          <div class="p-4 border rounded hover:shadow-md">
-            <img
-              src="https://img.icons8.com/ios-filled/50/shower.png"
-              class="mx-auto mb-2"
-            />
-            <p class="font-medium">Bathroom Partition</p>
-          </div>
-
-          <div class="p-4 border rounded hover:shadow-md">
-            <img
-              src="https://img.icons8.com/ios-filled/50/metal.png"
-              class="mx-auto mb-2"
-            />
-            <p class="font-medium">Metal Frame</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Store Section -->
-    <section id="store" class="py-12 px-4 bg-white">
-      <h2 class="text-2xl font-semibold text-center mb-8">Our Store</h2>
-      <div
-        class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 max-w-6xl mx-auto"
-      >
-        <div class="border rounded p-4 text-center shadow-sm">
-          <img
-            src="https://via.placeholder.com/150"
-            alt="Fan Kit"
-            class="mx-auto mb-2"
-          />
-          <h3 class="font-bold">Fan Installation Kit</h3>
-          <p class="text-sm text-gray-600">
-            All tools for a basic fan install.
-          </p>
-          <p class="text-blue-600 font-semibold mt-2">$25</p>
-          <button
-            class="mt-2 px-4 py-1 bg-blue-600 text-white rounded hover:bg-blue-700"
-          >
-            Buy Now
-          </button>
-        </div>
-        <div class="border rounded p-4 text-center shadow-sm">
-          <img
-            src="https://via.placeholder.com/150"
-            alt="Light Fixtures"
-            class="mx-auto mb-2"
-          />
-          <h3 class="font-bold">LED Light Fixture</h3>
-          <p class="text-sm text-gray-600">
-            Modern, energy-saving light fixtures.
-          </p>
-          <p class="text-blue-600 font-semibold mt-2">$40</p>
-          <button
-            class="mt-2 px-4 py-1 bg-blue-600 text-white rounded hover:bg-blue-700"
-          >
-            Buy Now
-          </button>
-        </div>
-        <div class="border rounded p-4 text-center shadow-sm">
-          <img
-            src="https://via.placeholder.com/150"
-            alt="Wiring Tools"
-            class="mx-auto mb-2"
-          />
-          <h3 class="font-bold">Wiring Toolkit</h3>
-          <p class="text-sm text-gray-600">All-in-one basic electrical kit.</p>
-          <p class="text-blue-600 font-semibold mt-2">$60</p>
-          <button
-            class="mt-2 px-4 py-1 bg-blue-600 text-white rounded hover:bg-blue-700"
-          >
-            Buy Now
-          </button>
-        </div>
-      </div>
-    </section>
-    <!-- Map & Review Section -->
-    <section class="py-12 px-4 bg-white text-center">
-      <div class="max-w-3xl mx-auto">
-        <img
-          src="https://via.placeholder.com/600x300?text=Service+Area+Map"
-          alt="Service Map"
-          class="rounded-lg mx-auto mb-6"
-        />
-        <div class="flex flex-col items-center gap-3">
-          <img
-            src="https://img.icons8.com/color/96/worker-male--v1.png"
-            alt="Electrician"
-            class="w-20 h-20"
-          />
-          <div>
-            <p class="italic text-lg">
-              "Very professional and quick to respond. Highly recommended."
-            </p>
-            <p class="mt-1 font-bold">– Jane S. ⭐⭐⭐⭐⭐</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- How It Works -->
-    <section class="py-12 px-4 bg-gray-50 text-center">
-      <h2 class="text-2xl font-semibold mb-10">How It Works</h2>
-      <div class="flex flex-col md:flex-row justify-center items-center gap-10">
-        <div>
-          <img
-            src="https://img.icons8.com/ios/100/monitor.png"
-            alt="Book"
-            class="mx-auto mb-2"
-          />
-          <p class="font-medium">Book</p>
-        </div>
-        <span class="text-2xl font-bold hidden md:inline">→</span>
-        <div>
-          <img
-            src="https://img.icons8.com/ios/100/home-page.png"
-            alt="Confirm"
-            class="mx-auto mb-2"
-          />
-          <p class="font-medium">Confirm</p>
-        </div>
-        <span class="text-2xl font-bold hidden md:inline">→</span>
-        <div>
-          <img
-            src="https://img.icons8.com/ios/100/engineer.png"
-            alt="Fix"
-            class="mx-auto mb-2"
-          />
-          <p class="font-medium">Fix</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="bg-gray-900 text-white pt-10">
-      <div class="max-w-6xl mx-auto px-4 md:px-8">
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-8 pb-10">
-          <!-- Logo & Tagline -->
-          <div>
-            <h3 class="text-2xl font-bold mb-2">⚡ VoltFix</h3>
-            <p class="text-gray-400 text-sm">
-              Fast and reliable electrician & home services.
-            </p>
-          </div>
-
-          <!-- Navigation Links -->
-          <div>
-            <h4 class="text-lg font-semibold mb-2">Quick Links</h4>
-            <ul class="space-y-1 text-gray-300 text-sm">
-              <li><a href="#home" class="hover:text-white">Home</a></li>
-              <li>
-                <a href="#services" class="hover:text-white">Services</a>
-              </li>
-              <li><a href="#about" class="hover:text-white">About</a></li>
-              <li><a href="#contact" class="hover:text-white">Contact</a></li>
-            </ul>
-          </div>
-
-          <!-- Contact Info -->
-          <div>
-            <h4 class="text-lg font-semibold mb-2">Contact Us</h4>
-            <p class="text-gray-300 text-sm">📞 +880 1234 567890</p>
-            <p class="text-gray-300 text-sm">✉️ support@voltfix.com</p>
-            <div class="flex space-x-4 mt-3">
-              <a href="#" class="hover:text-blue-400"
-                ><i class="fab fa-facebook-f"></i
-              ></a>
-              <a href="#" class="hover:text-blue-300"
-                ><i class="fab fa-twitter"></i
-              ></a>
-              <a href="#" class="hover:text-pink-400"
-                ><i class="fab fa-instagram"></i
-              ></a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Bottom Line -->
-        <div
-          class="border-t border-gray-700 text-center text-sm text-gray-500 py-4"
-        >
-          © 2025 VoltFix. All rights reserved.
-        </div>
-      </div>
-    </footer>
-  </body>
-</html>
-
