--- a/index.html
+++ b/index.html
@@ -145,30 +145,86 @@
           </svg>
         </button>
 
-        <!-- Menu Icon (optional side menu for Home/About) -->
+        <!-- Menu Icon -->
         <div class="text-xl cursor-pointer" @click="menuOpen = true">
           &#9776;
         </div>
       </div>
 
-      <!-- Side Menu Overlay -->
+      <!-- Full-Screen Mobile Menu -->
       <div
         x-show="menuOpen"
-        class="fixed inset-0 bg-black bg-opacity-50 z-20"
-        @click="menuOpen = false"
-      ></div>
-
-      <!-- Side Menu -->
-      <div
-        x-show="menuOpen"
-        class="fixed top-0 right-0 w-64 h-full bg-white shadow-lg z-30 p-4"
+        class="fixed inset-0 bg-white z-50 flex flex-col"
         @click.away="menuOpen = false"
-        x-data="{ sideDropdown: false }"
+        x-transition
       >
-        <h2 class="text-lg font-bold mb-4">Menu</h2>
-        <a href="#" class="block py-2 border-b">Home</a>
-        <a href="#" class="block py-2 border-b">About</a>
-        <a href="#" class="block py-2 border-b">Contact</a>
+        <!-- Header with Close Button -->
+        <div class="flex items-center justify-between p-4 border-b bg-gray-100">
+          <span class="text-lg font-bold">Menu</span>
+          <button
+            class="text-2xl font-bold text-gray-600 hover:text-black"
+            @click="menuOpen = false"
+          >
+            ✕
+          </button>
+        </div>
+
+        <!-- Navigation Links -->
+        <div class="flex-1 flex flex-col p-6 space-y-4 text-lg font-medium">
+          <a href="#" class="hover:text-blue-500">Home</a>
+          <a href="#" class="hover:text-blue-500">About</a>
+          <a href="#" class="hover:text-blue-500">Services</a>
+          <a href="#" class="hover:text-blue-500">Contact</a>
+        </div>
+
+        <!-- Bottom Buttons -->
+        <div class="p-6 border-t bg-gray-50 flex flex-col gap-3">
+          <!-- Store Button -->
+          <a
+            href="store.html"
+            class="w-full flex items-center justify-center gap-2 bg-blue-500 text-white py-3 rounded-lg font-semibold hover:bg-blue-600 transition"
+          >
+            <!-- Store Icon -->
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="w-5 h-5"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M3 3h18l-1 9H4L3 3zm0 0l3 12a4 4 0 008 0l3-12"
+              />
+            </svg>
+            Store
+          </a>
+
+          <!-- Order Button -->
+          <a
+            href="/order"
+            class="w-full flex items-center justify-center gap-2 bg-green-500 text-white py-3 rounded-lg font-semibold hover:bg-green-600 transition"
+          >
+            <!-- Order Icon -->
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="w-5 h-5"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M20 13V7a2 2 0 00-2-2h-3V3H9v2H6a2 2 0 00-2 2v6m16 0a9 9 0 11-18 0m18 0H2"
+              />
+            </svg>
+            Your Order
+          </a>
+        </div>
       </div>
     </div>
 
@@ -178,7 +234,7 @@
       class="hidden fixed inset-0 bg-black bg-opacity-50 z-40"
     ></div>
 
-    <!-- Full-Screen Sidebar -->
+    <!-- Full-Screen Services Sidebar -->
     <div
       id="mobile-sidebar"
       class="hidden fixed inset-0 bg-white z-50 flex flex-col"
@@ -201,7 +257,6 @@
       <div class="flex flex-1">
         <!-- Left Categories -->
         <div class="w-1/3 bg-gray-50 border-r overflow-y-auto">
-          <!-- Category List -->
           <ul id="categories" class="flex flex-col">
             <li
               class="p-4 flex items-center space-x-2 cursor-pointer hover:bg-gray-200"
