--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
     <div
       class="flex items-center justify-between p-3 bg-white border-b border-gray-200 lg:hidden"
       x-data="{ menuOpen: false }"
+      x-effect="document.body.style.overflow = menuOpen ? 'hidden' : ''"
     >
       <!-- Logo -->
       <div class="text-2xl font-bold text-blue-500">zoom</div>
@@ -154,12 +155,14 @@
       <!-- Full-Screen Mobile Menu -->
       <div
         x-show="menuOpen"
-        class="fixed inset-0 bg-white z-50 flex flex-col"
+        class="fixed inset-0 bg-white z-50 flex flex-col overflow-hidden"
         @click.away="menuOpen = false"
         x-transition
       >
         <!-- Header with Close Button -->
-        <div class="flex items-center justify-between p-4 border-b bg-gray-100">
+        <div
+          class="flex items-center justify-between p-4 border-b bg-gray-100 sticky top-0 z-10"
+        >
           <span class="text-lg font-bold">Menu</span>
           <button
             class="text-2xl font-bold text-gray-600 hover:text-black"
@@ -170,7 +173,9 @@
         </div>
 
         <!-- Navigation Links -->
-        <div class="flex-1 flex flex-col p-6 space-y-4 text-lg font-medium">
+        <div
+          class="flex-1 flex flex-col p-6 space-y-4 text-lg font-medium overflow-y-auto"
+        >
           <a href="#" class="hover:text-blue-500">Home</a>
           <a href="#" class="hover:text-blue-500">About</a>
           <a href="#" class="hover:text-blue-500">Services</a>
@@ -237,10 +242,12 @@
     <!-- Full-Screen Services Sidebar -->
     <div
       id="mobile-sidebar"
-      class="hidden fixed inset-0 bg-white z-50 flex flex-col"
+      class="hidden fixed inset-0 bg-white z-50 flex flex-col overflow-hidden"
     >
       <!-- Top Header with Title + Close Button -->
-      <div class="flex items-center justify-between bg-gray-100 p-4 border-b">
+      <div
+        class="flex items-center justify-between bg-gray-100 p-4 border-b sticky top-0 z-10"
+      >
         <span
           id="services-title"
           class="text-sm font-semibold truncate max-w-[80%]"
@@ -254,7 +261,7 @@
         </button>
       </div>
 
-      <div class="flex flex-1">
+      <div class="flex flex-1 overflow-y-auto">
         <!-- Left Categories -->
         <div class="w-1/3 bg-gray-50 border-r overflow-y-auto">
           <ul id="categories" class="flex flex-col">
@@ -323,6 +330,12 @@
       function toggleMenu() {
         sidebar.classList.toggle("hidden");
         overlay.classList.toggle("hidden");
+
+        if (!sidebar.classList.contains("hidden")) {
+          document.body.style.overflow = "hidden"; // stop background scroll
+        } else {
+          document.body.style.overflow = ""; // restore scroll
+        }
       }
 
       closeBtn.addEventListener("click", toggleMenu);
